idf_component_register(SRCS 
                           
                        "spi_master_example_main.c"
                        "button.c"
                        "menu.c"
                        "SH1106.c"
                        "button.c"
                        "chara.c"
                            
                            
                           
                    INCLUDE_DIRS "."
                    )